<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PostIt App</string>

    <!-- Widget strings -->
    <string name="widget_description">Widget de Post-it para exibir suas notas na tela inicial</string>
    <string name="widget_default_text">Toque para adicionar nota</string>
    <string name="widget_config_title">Configurar Post-it</string>
    <string name="widget_config_text_label">Texto da nota:</string>
    <string name="widget_config_hint">Digite sua nota aqui...</string>
    <string name="widget_config_color_label">Cor:</string>
    <string name="widget_config_save">Salvar</string>
</resources>
